# brf-neurons

./: .gitignore  README.md  pyproject.toml  visualizations.py
experiments/: visualization.py
experiments/SHD/: shd_alif_train.py  shd_train.py  shd_train_rf.py
experiments/SHD/ablation/: ablation_SOPs
experiments/SHD/models/: 05-23_18-24-01_init_2122_Adam(0.075),NLL,script-fgiDG,LinLR,LL(False,no_gc),700,128,20,bs_32,ep_20,RF(omega5.0,10.0b2.0,3.0)LI(20.0,5.0).pt
experiments/SSC/: generate_data_ssc.py
experiments/ecg/: ecg_alif_train.py  ecg_train.py  ecg_train_vrf.py  visualizations.py
experiments/ecg/ablation/: ablation_SOPs.txt
experiments/ecg/models/: 05-21_20-48-01_7675_Adam(0.1),script-bw,NLL,LinearLR,no_gc,4,36,6,bs=16,ep=400,BRF(omega3.0,5.0,b0.1,1.0)LI(20.0,1.0).pt  (+3 more)
experiments/smnist/: smnist_train.py  tools.py
experiments/smnist/runs/: alif_tbptt.csv  alif_tbptt_permuted.csv
jax_experiments/SHD/: generate_data_shd.py  shd_alif_train.py  shd_train.py  tools.py
jax_experiments/ecg/: ecg_alif_train.py  ecg_train.py  tools.py
jax_experiments/figures/: jax_visualisations_DONT_USE.ipynb
jax_experiments/runtimes/: scrapbook.txt
jax_experiments/smnist/: smnist_train.py  smnist_train_alif.py
jax_experiments/smnist/runs/: brf.csv  (+2 more)
jax_snn/: __init__.py  jax_visualisations_DONT_USE.ipynb
jax_snn/functional/: __init__.py  autograd.py  base.py
jax_snn/models/: __init__.py  harmonicsrrns.py  resonaternns.py  simplernns.py
jax_snn/modules/: alif.py  hrf.py  lif.py  linear_layer.py  rf.py
snn/models/: resonaternns.py
snn/modules/: rf.py
(+99 files in other folders)
