[project]
name = "brf-neurons"
version = "0.1.0"
description = "Reproduction for Balanced Resonate-and-Fire Neurons (Higuchi et al.)"
authors = [
    { name = "Henry Page", email = "dev@henrypage.com" }
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "torch==2.7.0",
    "torchvision==0.22.0",
    "tensorboard==2.19.0",
    "scipy==1.15.3",
    "matplotlib==3.10.3",
    "jax[cuda12]==0.5.3",
    "flax==0.10.6",
    "optax==0.2.4",
    "pandas==2.2.3",
    "notebook (>=7.4.3,<8.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

